# NetSuite-Connector

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/NetSuite_Connector/: NetSuite.py  ODBC.py
src/NetSuite_Connector.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/NetSuite_Connector_MarcosJokr/: NetSuite.py
src/NetSuite_Connector_MarcosJokr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_jdbc.py  test_netsuite.py  test_odbc.py
