[build-system]
requires = ["setuptools>=61.0","requests==2.27.1","requests-oauthlib==1.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "NetSuite_Connector_MarcosJokr"
version = "0.0.1"
authors = [
  { name="Marcos Lopez", email="erick.lopez@jokr.it" },
]
description = "NetSuite Connector"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Marcosjokr/NetSuite-Connector"
"Bug Tracker" = "https://github.com/Marcosjokr/NetSuite-Connector/issues"