[build-system]
requires = ["setuptools>=61.0","requests==2.27.1","requests-oauthlib==1.3.1","pyodbc>=4.0.34","pandas>=1.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NetSuite-Connector"
version = "0.1.0"
authors = [
  { name="Marcos Lopez", email="erick.lopez@jokr.it" },
]
description = "NetSuite Connector"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Marcosjokr/NetSuite-Connector"
"Bug Tracker" = "https://github.com/Marcosjokr/NetSuite-Connector/issues"